# rust-lisbon-2020-demos

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
js/: index.js
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs
