# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
wasm-bindgen = "0.2.58"
wee_alloc = "0.4.5"
seed = "0.6.0"

shared = { path = "../shared/" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.8"
futures = "0.3.4"
js-sys = "0.3.35"
wasm-bindgen-futures = "0.4.8"

[dependencies.web-sys]
version = "0.3.35"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
